# factor-analysis

./: .gitignore  README.md  pyproject.toml  run.ipynb
parquet/ticker/: IDU.parquet  IYC.parquet  IYE.parquet  IYF.parquet  IYH.parquet  IYJ.parquet  IYK.parquet  IYM.parquet  IYR.parquet  IYW.parquet  IYZ.parquet
src/: backtest.py  benchmark.py  data_loader.py  fund_universe.py  market.py  metric.py  portfolio.py  rebalance.py  run.py
src/analysis/: hit_rate.py  information_coefficient.py  monthly_performance.py  plot.py  risk_breakdown.py  risk_breakdown_to_factor.py  risk_breakdown_with_weight.py  security_weight_util.py  var.py
src/factor/: base_factor.py  cape.py  roe.py
src/impl/: base_impl.py  cape.py  roe.py
